调整title，删掉无用的文件

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -30,7 +30,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title" style="color: white;">笔记</h1>
-			<h1 id="finish" class="mui-title" style="text-align: right;right: 10px;">完成</h1>
+			<div id="finish" class="title-text-pull-right">完成</div>
 		</header>
 		<div class="mui-content">
 			<textarea id="notes" oninput="if(value.length>2000)value=value.slice(0,2000)" placeholder="✎ 分享你的学习与生活..."></textarea>
