--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -33,7 +33,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title" style="text-align: left;color: white;"></h1>
-			<h1 id="commit" class="mui-title" style="text-align: right;right: 10px;">发布</h1>
+			<div id="commit" class="title-text-pull-right">发布</div>
 		</header>
 		<div class="mui-content">
 			<ul class="mui-table-view" id="ul_table" style="margin-top: 0px;">
