--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -134,7 +134,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title" style="text-align: left;color: white;"></h1>
-			<h1 id="add" class="mui-title" style="text-align: right;right: 10px;">添加</h1>
+			<div id="add" class="title-text-pull-right">添加</div>
 		</header>
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" style="z-index: 1;">
 			<div class="mui-scroll">
