--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -126,7 +126,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title" style="color: white;">创建资料</h1>
-			<h1 id="finish" class="mui-title" style="text-align: right;right: 10px;">完成</h1>
+			<div id="finish" class="title-text-pull-right">完成</div>
 		</header>
 
 		<div id="content" class="mui-content">
