1、作业修改学生作业图片 返回刷新界面 2、求知提问限制字数 3、展现动态详情显示空白 所有头像显示默认头像

--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -267,7 +267,8 @@
 					if(data.RspCode == 0) {
 						mui.toast('修改作业答案成功！')
 						events.fireToPageNone('homework-commented.html', 'refreshAnswer', {
-							answer: textView.value
+							answer: textView.value,
+							Files:CloudFileUtil.files
 						});
 						CloudFileUtil.files = [];
 						//清空输入框
