--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -37,11 +37,11 @@
 		</div>
 		<div class="mui-content">
 			<form name="form1" action="" method="post">
-				<textarea id="askTitle" name="topic" placeholder="标题（请以？号结尾）" style="height: 40px;margin-top: 5px;"></textarea>
+				<textarea id="askTitle" name="topic" placeholder="标题（请以？号结尾,最多200字）" style="height: 40px;margin-top: 5px;"></textarea>
 			</form>
 			<p style="margin-left: 10px;font-size: 14px;margin-top: -12px;">请添加问题的补充说明</p>
 			<div class="input-content">
-				<textarea id="askNote" placeholder="请输入内容"></textarea>
+				<textarea id="askNote" placeholder="请输入内容（最多2000字）"></textarea>
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji1"></a>
 				</div>
