--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -220,8 +220,9 @@
 				}
 			}
 		});
+		var SCREEN_WIDTH;
 		mui.plusReady(function() {
-			
+			SCREEN_WIDTH = plus.screen.resolutionWidth;
 			datasource = plus.webview.currentWebview().data
 
 			publisherId = datasource.publisherId
@@ -280,9 +281,9 @@
 			//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
 			//判断img是否为null，或者空
 			var tempModel = data;
-			tempModel.uimg = updateHeadImg(tempModel.uimg)
+			tempModel.PublisherImg = updateHeadImg(tempModel.PublisherImg,2)
 
-			var personalImage = tempModel.uimg;
+			var personalImage = tempModel.PublisherImg;
 			if(!tempModel.PublisherName){
 				tempModel.PublisherName= tempModel.unick
 			}
