更改求知新问题图片放置样式

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -61,7 +61,7 @@
 			</p>
 			<p id="atExpert" style="margin-top: 10px;margin-left: 10px;font-size: 14px;">邀请专家：
 				<font id="selectedExpert" style="color: dodgerblue;"></font><span class="mui-icon mui-icon-forward mui-pull-right"></span></p>
-			<div id="pictures" style="float: left;background-color: transparent;width: 320px;"></div>
+			<div id="pictures" style="width: 100%;"></div>
 			<!--<div class="mui-input-row mui-checkbox mui-left" style="float: right;width: 100px;margin-top: -35px;margin-left: -100px;">
 				<label>匿名</label>
 				<input id="checkbox" name="checkbox" value="" type="checkbox">
