--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -376,10 +376,10 @@
 		var id = 0; //cell的id
 		mui.plusReady(function() {
 			SCREEN_WIDTH = plus.screen.resolutionWidth;
-			gid = plus.webview.currentWebview().data.data.classId
+			gid = plus.webview.currentWebview().data.classId
 			mui.previewImage();
 			addReplyView();
-			publisherId = plus.webview.currentWebview().data.data; //发布者id
+			publisherId = plus.webview.currentWebview().data; //发布者id
 
 			tempPage = 1; //页码，请求第几页数据
 			totalCnt = 0; //当前留言的总条数
@@ -395,66 +395,27 @@
 			window.addEventListener('refreshZonep', function(data) {
 				requestData(comData)
 			})
-			window.addEventListener('headImgPush', function(data) {
-//				plus.webview.currentWebview().reload();
-//				SCREEN_WIDTH = plus.screen.resolutionWidth;
-//				gid = plus.webview.currentWebview().data.data.classId
-//				mui.previewImage();
-//				addReplyView();
-//				publisherId = plus.webview.currentWebview().data.data; //发布者id
-//
-//				tempPage = 1; //页码，请求第几页数据
-//				totalCnt = 0; //当前留言的总条数
-//				flag = 2; //判断是加载更多1，还是刷新2
-//				var comData = {
-//					userId: personalUTID, //用户ID
-//					publisherId: publisherId, //发布用户ID
-//					noteType: '2', //信息类型,1云笔记,2个人空间动态
-//					pageIndex: (tempPage).toString(), //当前页数
-//					pageSize: '10' //每页记录数
-//				};
-//				requestData(comData);
+
+			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
+				var index = this.id.replace('headImg', '');
+				mui.openWindow({
+					url: 'zone_main.html',
+					id: 'zone_main.html',
+					styles: {
+						top: '0px', //设置距离顶部的距离
+						bottom: '0px'
+					},
+
+					extras: {
+						data: zonepArray[index].PublisherId,
+						NoReadCnt: 0,
+						flag: '0'
+					},
+					createNew: true,
+
+				});
+
 			})
-//			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
-//				var index = this.id.replace('headImg', '');
-//				var wv = plus.webview.getWebviewById('zone_main.html');
-//				console.log('wv='+wv);
-////				if(wv) {
-////					events.fireToPageWithData('zone_main.html', 'headImgPush', {
-////						data: index,
-////						NoReadCnt: 0,
-////						flag: '0'
-////					})
-////				} else {
-////					events.openNewWindowWithData('zone_main.html', {
-////							data: index,
-////							NoReadCnt: 0,
-////							flag: '0'
-////						});
-////					events.fireToPageWithData('zonep_sub.html', 'headImgPush', {
-////							data: index,
-////							NoReadCnt: 0,
-////							flag: '0'
-////						});
-//					mui.openWindow({
-//						url: 'zone_main.html',
-//						id: 'zone_main.html',
-//						styles: {
-//							top: '0px', //设置距离顶部的距离
-//							bottom: '0px'
-//						},
-//						
-//						extras: {
-//							data: index,
-//							NoReadCnt: 0,
-//							flag: '0'
-//						},
-//						createNew:true,
-//
-//					});
-////				}
-//
-//			})
 			var click = []; //记录被点击的li的id和被点击元素
 
 			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
@@ -496,7 +457,7 @@
 				events.openNewWindowWithData('space-detail.html', zonepArray[index])
 				click.push(id);
 				click = [];
-			})
+			}) 
 			mui('.mui-table-view').on('tap', '.show2', function() {
 
 				var toast = '';
