修改关闭预览逻辑

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetail.html
@@ -24,10 +24,10 @@
 			mui.plusReady(function(){
 				//沉浸式状态栏处理
 				events.changeTopPocket();
-				plus.webview.currentWebview().addEventListener("hide",function(){
-					console.log("hide")
-					events.fireToPageNone('qiuzhi-answerDetailSub.html','closePreview')
-				})
+//				plus.webview.currentWebview().addEventListener("hide",function(){
+//					console.log("hide")
+//					events.fireToPageNone('qiuzhi-answerDetailSub.html','closePreview')
+//				})
 			})
 		</script>
 	</body>
